--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ body{
     font-weight: 500;
     color: var(--color-dark);
     padding-top: 24px ;
-    padding-bottom: 32px;
+    padding-bottom: 33px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -308,6 +308,7 @@ body{
     min-width: 216;
     margin-top: 30px;
     border: 0;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open-btn:hover,
@@ -350,10 +351,7 @@ body{
     width: 100%;
     padding-top: 27px;
     padding-bottom: 27px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    text-align: center;
 }
 
 
@@ -574,7 +572,8 @@ body{
     letter-spacing: 0.03em;
     padding: 6px 22px;
     border: none;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 4px;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-button-item:hover,
@@ -622,7 +621,8 @@ body{
 }
 
 .portfolio-link {
-display: block;
+    display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover .overlay,
