--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,8 @@ body{
     min-width: 216;
     margin-top: 30px;
     border: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -574,6 +576,12 @@ body{
     border: none;
     border-radius: 4px;
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.active {
+    background-color: var(--accent-color);
+    color: var(--white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .menu-button-item:hover,
